src_old/objects/AppLog__c.object
<CustomObject>
    <description>app log</description>
    <fields>
        <fullName>AsyncApexJobId__c</fullName>
        <description>async apex job ID</description>
        <label>AsyncApexJob ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>The log detail could be exception stack trace or detail of logging message</description>
        <label>Detail</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <description>the source where this log is generated</description>
        <label>Event Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <description>Exception Type</description>
        <label>Exception Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsParameterTruncated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>it indicates if the parameter (40K) data is truncated or not</description>
        <label>Is Parameter Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <description>The log impact on the application.</description>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>a log message that could be short description of the logging meaning</description>
        <label>Message</label>
        <length>5120</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <description>a running data when the log is captured</description>
        <label>Parameter</label>
        <length>40960</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>the stage of the batch process when this log happens</description>
        <label>Phase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplayId__c</fullName>
        <description>The event replay ID</description>
        <label>Replay ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <description>Request Unique Identifier</description>
        <label>Request ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Application Log</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Application Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>